# bot-or-not

./: # Code Citations.md  .dockerignore  .env.example  .env.prod  .env.prod.example  .gitignore  Dockerfile  README.md  ai_bot.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  game_logic.py  gamedesign.md  instuction.txt  main.py  pyproject.toml  requirements.txt  run.py
bot_or_not/: __init__.py  ai_bot.py  game_logic.py  main.py  prompts.py
static/: i18n.js  index.html  script.js  style.css
traefik/: traefik.yml
traefik/dynamic/: middlewares.yml
